--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
     li{
         list-style: none;
     }
+    #video{
+        max-width: 560px;
+        height: 100%;
+    }
 </style>
 
 <html>
@@ -53,16 +57,19 @@
             <nav id="nav-bar">
                 <ul>
                     <li>
-                        <a href="#features">Features</a>
+                        <a class="nav-link" href="#features">Features</a>
                     </li>
                     <li>
-                        <a href="#how-it-works">How it Works</a>
+                        <a class="nav-link" href="#how-it-works">How it Works</a>
                     </li>
                     <li>
-                        <a href="#pricing">Pricing</a>
+                        <a class="nav-link" href="#pricing">Pricing</a>
                     </li>
                 </ul>
             </nav>
         </header>
+        <section id="how-it-works">
+            <iframe id="video" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&controls=0&showinfo=0" height="315" frameborder="0"></iframe>
+        </section>
     </body>
 </html>
