--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <style>
-    img{
-        max-width: 25%;
-    }
     #header{
         display: flex;
         flex-direction: row;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
         justify-content: space-around;
         position:fixed;
         align-items: center;
-        position: fixed;
-        background-color: navy;
+        width:100%;
         padding: 0 20px;
         box-sizing: border-box;
+        top:0;
+        left:0;
+        height: 50px;
         /* TO DO: clean up - i added a whole bunch of stuff from the sample page code that idk what it does*/
     }
-    #logo-img{
-        display: block;
-        background-color: coral;
-        margin: 0;
+    #header-img{
+        align-self: flex-start;
+        left: 0;
+        height: 50px;
+        width: available;
+        margin-top: 10px;
         padding: 0;
         /* TO DO: make the logo bigger and responsive*/
     }
@@ -27,24 +28,37 @@
         display: block;
         margin: 0;
         padding: 0;
-        background-color: coral;
+    }
+    #video{
+        width: 560px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
     ul{
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
-        width: 35vw;
+        justify-content: space-evenly;
+        width: 40vw;
     }
     li{
         list-style: none;
     }
-    #video{
-        max-width: 560px;
-        height: 100%;
+    html{
+        min-width: 560px;
+    }
+    h1{
+        text-align: center;
+    }
+    body{
+        text-align: center;
+    }
+    section{
+        margin-top:50px;
     }
 </style>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Koray Eren - Survey Form Project - freeCodeCamp</title>
@@ -52,7 +66,7 @@
     <body>
         <header id="header">
             <div id="logo">
-                <img id="logo-img" src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="Original Trombones logo">
+                <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="Original Trombones logo">
             </div>
             <nav id="nav-bar">
                 <ul>
@@ -68,8 +82,27 @@
                 </ul>
             </nav>
         </header>
+
+        <section style="margin-top: 120px" id="form">
+            <div>
+                <h1>Handcrafted, home-made masterpieces</h1>
+                <form action="https://www.freecodecamp.com/email-submit">
+                    <input type="email" id="email" placeholder="Enter your email">
+                    <input id="submit" type="submit" value="Get Started" class="btn">
+                </form>
+            </div>
+        </section>
+
+        <section id="features">
+            <div> test </div>
+        </section>
+
         <section id="how-it-works">
-            <iframe id="video" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&controls=0&showinfo=0" height="315" frameborder="0"></iframe>
+            <iframe id="video" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&controls=0&showinfo=0" height="315" style="border:0"></iframe>
+        </section>
+
+        <section id="pricing">
+            <div> test </div>
         </section>
     </body>
 </html>
